# sparta

.github/workflows/: main.yml
ad_src/: CMakeCache.txt  CMakeLists.txt  Makefile  ad_convert.py  ad_fix_varargs.py  bezier_gen.cpp  bezier_geom.cpp  bezier_geom.h  clean.sh  cmake_install.cmake  drag.in  drag_main.cpp  drag_objective.cpp  drag_objective.h  drag_opt.in  drag_tnlp.cpp  drag_tnlp.h  opt_ipopt.cpp  opt_main.cpp  optimize_shapes.py  reference_gradient.txt  svg_shape.cpp  svg_shape.h  test_ad_geom.cpp
ad_src/bezier/: data.bezier_alpha  in.bezier_alpha
ad_src/bezier/output/ad_2026-07-14_tight_box/: config.txt  result.txt  trajectory.csv
ad_src/bezier/output/fd_2026-07-14_tight_box/: config.txt  result.txt  trajectory.csv
ad_src/buld/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/presets/: CMakeCache.txt  Makefile  cmake_install.cmake  mac.cmake
cmake/presets/examples/: Makefile  cmake_install.cmake
cmake/presets/paraview/: Makefile  cmake_install.cmake
cmake/presets/src/: Makefile  cmake_install.cmake
cmake/presets/src/FFT/: Makefile  cmake_install.cmake
cmake/presets/src/KOKKOS/: Makefile  cmake_install.cmake
cmake/presets/src/PYTHON/: Makefile  cmake_install.cmake
cmake/presets/src/STUBS/: Makefile  cmake_install.cmake
cmake/presets/src/include/: math_extra.h
examples/circle/: spa_
src/: accelerator_kokkos.h  accelerator_kokkos_defs.h  adapt_grid.cpp  adapt_grid.h  balance_grid.cpp  balance_grid.h  collide.cpp  collide.h  collide_vss.cpp  collide_vss.h  comm.cpp  comm.h  compute.cpp  compute.h  compute_boundary.cpp  compute_boundary.h  compute_count.cpp  compute_count.h  compute_distsurf_grid.cpp  compute_distsurf_grid.h  compute_dt_grid.cpp  compute_dt_grid.h  compute_eflux_grid.cpp  compute_eflux_grid.h  compute_gas_collision_grid.cpp  compute_gas_collision_grid.h  compute_gas_collision_tally.cpp  compute_gas_collision_tally.h  compute_gas_reaction_grid.cpp  compute_gas_reaction_grid.h  compute_gas_reaction_tally.cpp  compute_gas_reaction_tally.h  compute_grid.cpp  compute_grid.h  compute_isurf_grid.cpp  compute_isurf_grid.h  compute_ke_particle.cpp  compute_ke_particle.h  compute_lambda_grid.cpp  compute_lambda_grid.h  (+265 more)
src/MAKE/: Makefile.mac  Makefile.serial  Makefile.serial_ad
src/STUBS/: mpi.c  mpi.h
